--- a/exam-common/pom.xml
+++ b/exam-common/pom.xml
@@ -111,6 +111,12 @@
             <version>2.2.4.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <version>2.2.4.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
